<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#039BE5"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="309dp"
        android:layout_height="116dp"
        android:contentDescription="@string/FirebaseLogoLogin"
        app:srcCompat="@drawable/logo_built_knockout" />

    <EditText
        android:id="@+id/txtUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/userEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/txtPasswordLogin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/userPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/diseno_buton"
        android:fontFamily="casual"
        android:text="@string/loginUser"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/forgotPassword"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtViewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/create_an_account"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/diseno_buton"
        android:drawableLeft="@drawable/icons8_logo_de_google_48"
        android:fontFamily="casual"
        android:text="@string/google"
        android:textSize="18sp" />


    <Button
        android:id="@+id/btnPhoneNumberLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/diseno_buton"
        android:drawableLeft="@android:drawable/stat_sys_phone_call"
        android:fontFamily="casual"
        android:text="@string/btn_phone_number"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnMFA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/diseno_buton"
        android:drawableLeft="@android:drawable/stat_sys_phone_call"
        android:fontFamily="casual"
        android:text="@string/btn_MFA"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/diseno_buton"
        android:drawableLeft="@drawable/icons8_facebook_50"
        android:fontFamily="casual"
        android:text="@string/btn_Facebook"
        android:textSize="18sp" />
</LinearLayout>